Guava replacement.